src/test/deca/context/invalid/homemade/tests/test_non_implemented/test_invalid_instanceof_float.deca
// test invalide de la règle instance of



{
    float a = 8;
    println(a instanceof float);
}